# pyarrowspace

./: .gitignore  Cargo.toml  GRAPH_VARIABLES.md  NORMALISATION.md  README.md  TAUMODE.md  cve_comparison_metrics.csv  cve_search_results.csv  cve_summary.csv  cve_tail_metrics.csv  pyproject.toml
.github/workflows/: CI.yml  python-publish.yml
src/: energyparams.rs  helpers.rs  lib.rs
tests/: embeddings_model.py  requirements.txt  svdecomposition.py  test_0.py  test_1_quora_questions.py  test_2_CVE_db.py  test_3_beir.py  test_4_msmarco_tau_sweep.py  test_5_msmarco_eps_sweep.py  test_6_beir_new_score.py  test_7_beir_new_score_sweep.py  test_8_CVE_db_sweep.py  test_9_CVE_db_fixed_eta.py
tests/output/: CVE-taumode_cosine_eps.csv  v0_16_CVE_384.csv
tests/output/1760231695_v0_15/: cve_comparison_metrics.csv  cve_search_results.csv  cve_summary.csv  cve_tail_metrics.csv  test_results.txt
tests/output/1760238942_v0_15/: test_results.txt
tests/output/1760405824_v0_15_with_spec/: cve_search_results.csv  cve_summary.csv  cve_tail_metrics.csv  test_results.txt
tests/output/1760485696_with_spec_new_data/: cve_search_results.csv  cve_summary.csv  cve_tail_metrics.csv  test_results.txt
tests/output/1760626651_v0_15/: cve_comparison_metrics.csv  cve_search_results.csv  cve_summary.csv  cve_tail_metrics.csv  test_results.txt
tests/output/1760705545_v0_16/: cve_comparison_metrics.csv  cve_search_results.csv  cve_summary.csv  cve_tail_metrics.csv  suggested_eps.md  test_results.txt
tests/output/1761047573_v0_17/: cve_comparison_metrics.csv  cve_search_results.csv  cve_summary.csv  cve_tail_metrics.csv  test_results.txt
tests/output/1761063134_v0_17_beir-msmarco/: beir_evaluation_results.json  test_results.txt
tests/output/1761063804_v0_17_msmarco_tausweep/: beir_tau_sweep_results.json  test_results.txt
tests/output/1761065864_v0_17_msmarco_epssweep/: beir_eps_sweep_results.json  test_results.txt
(+16 files in other folders)
