[package]
name = "pyarrowspace"
version = "0.13.1"
edition = "2024"

[lib]
name = "pyarrowspace"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use arrowspace;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
arrowspace = { path = "../arrowspace-rs"}
pyo3 = { version = "*", features = ["extension-module"] }
numpy = "0.19"
