[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "arrowspace"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/tuned-org-uk/pyarrowspace"
Repository = "https://github.com/tuned-org-uk/pyarrowspace.git"

[tool.maturin]
features = ["pyo3/extension-module"]

exclude = [
    "tests/",           # Exclude the entire 'tests' directory
    ".github/",            # Exclude the 'docs' directory
    "**/*.pyc",         # Exclude all compiled Python files
    "*.md",
    ".gitignore"
]
